# Kubent

./: .env.example  .gitignore  E2E_without_llm.md  README.md  TODO.md  generate_test_metrics.py  minimal_test.py  pyproject.toml  requirements.txt  test_folder_metrics.py
config/: config.yaml
docs/: architecture.md  cli.md  development.md  log_sources.md  predictor.md  prompting.md  providers.md  roadmap.md  testing.md  watcher.md
mocks/generators/: log_generator.py
src/: __main__.py
src/config/: settings.py
src/core/log_sources/: __init__.py  base.py  factory.py  folder_source.py  mock_file_source.py
src/core/metrics/: __init__.py  base.py  events.py  factory.py  folder_metric_source.py  mock_metric_source.py  models.py  predictor.py  rules.py  scenario_generator.py  scenarios.py
src/core/predictor/: __init__.py  models.py  predictor.py
src/core/watcher/: __init__.py  context_builder.py  detector.py  models.py  watcher.py
src/kubernetes_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/providers/: base.py  factory.py  llama_cpp.py  openai.py  retry.py
tests/integration/: test_llm_pipeline.py  test_log_sources.py
tests/integration/metrics/: __init__.py  test_metric_pipeline.py
tests/integration/predictor/: test_predict_flow.py
tests/integration/watcher/: test_multi_service.py  test_watcher_flow.py
tests/unit/: test_cli_factory.py  test_config.py  test_folder_source.py  test_log_sources.py
tests/unit/metrics/: test_folder_metric_source.py  test_metric_models.py  test_metric_predictor.py  test_mock_metric_source.py  (+2 more)
(+6 files in other folders)
