[project]
name = "kubernetes-agent"
version = "0.1.0"
description = "AI-powered observability assistant for Kubernetes/Grafana log analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
    "click>=8.1,<9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
